<resources>
    <string name="app_name">Predictify</string>
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">Agree</string>
    <string name="skip">Cancel</string>
    <string name="start">Agree</string>

    <string name="slide_1_title">Disclaimer</string>
    <string name="slide_1_desc">ESH2017: Predictify is just a prediction app. you should always contact an authorized lab or physician for more detailed analysis and suggestions </string>

    <string name="slide_2_title">Privacy Policy</string>
    <string name="slide_2_desc">ESH2017: To provide health prediction functions,
        the app requires access to your basic personal information, location, sensors and usage data from health bands </string>

    <string name="slide_3_title">Diet Chart</string>
    <string name="slide_3_desc">ESH2017: Make your diet chart by the help of health experts</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>

    <string name="sign_in">Sign in</string>
    <string name="use_social_login">Or Use Social Login</string>
    <string name="fb">Facebook</string>
    <string name="tw">Twitter</string>
    <string name="gplus">Google</string>
    <string name="home">Home</string>
    <string name="under_construction">Under Construction!</string>
    <string name="settings">Prediction</string>
    <string name="profile">About You</string>
    <string name="sign_out">Sign out</string>
    <string name="race">Living Region</string>
    <string name="food_habit">Enter Food Habit (ex. Paleo)</string>
    <string name="food_supplementary">Food Supplement (ex. Omega D3)</string>
    <string name="lifestyle">Lifestyle Details (ex. Yoga)</string>
    <string name="loading">Registering account. Please wait!</string>
    <string name="signin">Signing in. Please wait!</string>
    <string name="signin_via_fb">Signing in via Facebook. Please wait!</string>
    <string name="forgot_pwd">Forgot password?</string>
    <string name="create_account">Create Account</string>
    <string name="signin_via_tw">Signing in via Twitter. Please wait!</string>
    <string name="saving_profile">Saving profile. Please wait!</string>
    <string name="start_learning">Start AI Prediction Engine</string>
    <string name="stop_learning">Stop Learning and Show Results</string>
    <string name="status_service">STATUS</string>
    <string name="user_activity">Activity:</string>
    <string name="heart_rate">Heart Rate:</string>
    <string name="longitude">Longitude:</string>
    <string name="latitude">Latitude:</string>
    <string name="Predicted">Predicted Result:</string>
    <string-array name="race_array">
        <item>American</item>
        <item>European</item>
        <item>Asian</item>
        <item>Korean</item>
        <item>Swedish</item>
        <item>Other</item>
    </string-array>
    <string-array name="sub_race_array">
        <item>Scandinavian</item>
        <item>Mediterranean</item>
    </string-array>
    <string-array name="food_habit_array">
        <item>Vegetarian</item>
        <item>Non Vegetarian</item>
        <item>Vegan</item>
        <item>Paleo</item>
        <item>Keto</item>
    </string-array>
    <string-array name="food_supplement_array">
        <item>Omega 3</item>
        <item>Vitamin D3</item>
    </string-array>
    <string-array name="exercise_array">
        <item>Running</item>
        <item>Yoga</item>
        <item>Workouts</item>
    </string-array>
</resources>
