<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:checkableBehavior="single">

        <item
            android:id="@+id/drawer_home"
            android:icon="@drawable/home"
            android:title="@string/home"/>
        <item
            android:id="@+id/drawer_profile"
            android:icon="@drawable/account"
            android:title="@string/profile"/>

        <item
            android:id="@+id/drawer_settings"
            android:icon="@drawable/settings"
            android:title="@string/settings"/>

        <item
            android:id="@+id/drawer_signout"
            android:icon="@drawable/logout"
            android:title="@string/sign_out"/>

        <!--<item
            android:id="@+id/drawer_snackbar"
            android:title="@string/snackbar"/>

        <item
            android:id="@+id/drawer_coordinator"
            android:title="@string/coordinator"/>-->

    </group>

</menu>