<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:facebook="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#34495e">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/medication" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Welcome"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:textStyle="bold" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_login_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/et_bg"
                android:drawablePadding="@dimen/activity_horizontal_margin"
                android:drawableStart="@drawable/account"
                android:hint="Email"
                android:inputType="textEmailAddress"
                android:maxLines="2"
                android:minHeight="@dimen/desc_padding"
                android:padding="5dp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_login_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/et_bg"
                android:drawablePadding="@dimen/activity_horizontal_margin"
                android:drawableStart="@drawable/lock"
                android:hint="Password"
                android:inputType="numberPassword"
                android:maxLines="1"
                android:minHeight="@dimen/desc_padding"
                android:padding="5dp"
                android:textColor="@color/colorAccent" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:background="@drawable/et_bg"
            android:backgroundTint="@color/login_bg"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:text="@string/use_social_login"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <!--<FrameLayout
                android:id="@+id/FrameLayout1"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content" >

                <com.facebook.login.widget.LoginButton
                    android:id="@+id/fb_login_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:visibility="gone" />

                <ImageButton
                    android:id="@+id/btn_fb_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@null"
                    android:contentDescription="@null"
                    android:src="@mipmap/fb_login" />
            </FrameLayout>-->

            <ImageButton
                android:id="@+id/btn_fb_login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@null"
                android:layout_weight="1"
                android:contentDescription="@null"
                android:src="@mipmap/fb_login" />

            <ImageButton
                android:id="@+id/btn_tw_login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:contentDescription="@null"
                android:src="@mipmap/tw_login" />

            <ImageButton
                android:id="@+id/btn_gplus_login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:contentDescription="@null"
                android:src="@mipmap/google_login" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <Button
                android:id="@+id/btn_create_acc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:background="@color/create_acc"
                android:text="@string/create_account"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_forgot_pwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:autoLink="web"
                android:background="@color/create_acc"
                android:text="@string/forgot_pwd"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>	
